# bob.bio.face

./: .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.md  README.rst  buildout-dev.cfg  buildout.cfg  databases.txt  develop.cfg  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/bio/face/: __init__.py  color.py  helpers.py  image.py  utils.py
bob/bio/face/algorithm/: GaborJet.py  Histogram.py  LGBPHS.py  __init__.py
bob/bio/face/annotator/: Base.py  FailSafe.py  __init__.py  bobipdlib.py  bobipfacedetect.py  bobipflandmark.py  bobipmtcnn.py  bobiptinyface.py  faceX_106landmarks.py  mtcnn.py  tinyface.py  utils.py
bob/bio/face/baseline/: baseline.py
bob/bio/face/config/algorithm/: bic_jets.py  gabor_jet.py  histogram.py  lgbphs.py
bob/bio/face/config/annotator/: dlib.py  facedetect.py  facedetect_eye_estimate.py  flandmark.py  mtcnn.py  tinyface.py
bob/bio/face/config/baseline/: EfficientNet.py  afffe.py  arcface_insight_tf.py  arcface_insightface.py  attention_net.py  dummy.py  efficient_net.py  facenet.py  facenet_sanderberg.py  gabor_graph.py  ghost_net.py  helpers.py  hr_net.py  inception_resnetv1_casiawebface.py  inception_resnetv1_msceleb.py  inception_resnetv2_casiawebface.py  inception_resnetv2_msceleb.py  iresnet100.py  iresnet100_elastic.py  iresnet100_msceleb_arcface_20210623.py  iresnet34.py  iresnet50.py  iresnet50_msceleb_arcface_20210623.py  lda.py  lgbphs.py  mobile_facenet.py  mobilenetv2_msceleb_arcface_2021.py  mxnet_pipe.py  mxnet_tinyface.py  mxnet_tinyface_pipe.py  opencv_pipe.py  opencv_tinyface_pipe.py  oxford_resnet50_ft_dag_vgg2.py  oxford_resnet50_scratch_dag_vgg2.py  oxford_senet50_ft_dag_vgg2.py  oxford_senet50_scratch_dag_vgg2.py  pytorch_pipe_v1.py  pytorch_pipe_v2.py  resne_st.py  resnet.py  (+10 more)
bob/bio/face/config/database/: arface.py  arface_expression.py  arface_illumination.py  arface_occlusion.py  arface_occlusion_and_illumination.py  atnt.py  banca_english.py  caspeal.py  caspeal_accessory.py  caspeal_background.py  caspeal_distance.py  caspeal_lighting.py  fargo.py  frgc.py  frgc_experiment4.py  gbu.py  gbu_bad.py  gbu_good.py  gbu_ugly.py  ijba.py  ijbb.py  ijbc.py  lfw_o1.py  lfw_o2.py  lfw_o3.py  lfw_restricted.py  (+30 more)
bob/bio/face/data/: boxes.hdf5  detections.hdf5  testimage.json
bob/bio/face/database/: __init__.py  arface.py  atnt.py  banca.py  casia_africa.py  caspeal.py  cbsr_nir_vis_2.py  cuhk_cufs.py  database.py  fargo.py  frgc.py  gbu.py  ijba.py  ijbb.py  ijbc.py  lfw.py  mcxface.py  meds.py  mobio.py  morph.py  msu_mfsd_mod.py  multipie.py  pola_thermal.py  replay.py  replaymobile.py  replaymobile_csv.py  rfw.py  sample_loaders.py  scface.py  survface.py  tinyface.py  vgg2.py  xm2vts.py
bob/bio/face/embeddings/: __init__.py  arface.py  facenet_sanderberg.py  idiap_inception_resnet.py  mobilenet_v2.py  mxnet.py  mxnet_models.py  opencv.py  pytorch.py  resnet50.py  tensorflow.py  tensorflow_compat_v1.py  tf2_inception_resnet.py
bob/bio/face/extractor/: DCTBlocks.py  DRGANLight.py  Eigenface.py  GridGraph.py  LGBPHS.py  Luan.py  MxNetModel.py  OpenCVModel.py  PyTorchModel.py  PyTorchModel.py~HEAD  TensorFlowModel.py  TensorFlowModel.py~HEAD  __init__.py  mxnet_resnet.py  opencv_caffe.py  pytorch_model.py  tf_model.py
bob/bio/face/preprocessor/: Base.py  FaceCrop.py  FaceDetect.py  HistogramEqualization.py  INormLBP.py  Scale.py  SelfQuotientImage.py  TanTriggs.py  __init__.py  croppers.py  utils.py
bob/bio/face/pytorch/: callbacks.py  preprocessing.py
bob/bio/face/pytorch_datasets/: __init__.py  webface42m.py
bob/bio/face/reports/: arface.py  gbu.py  ijbc.py  mobio.py  multipie.py  scface.py
bob/bio/face/script/: annotate.py  baselines.py  crop_face_106_landmarks.py  display_face_annotations.py  face.py  face_plots_commands.py  ijba_collect_results.py  plots.py
bob/bio/face/tensorflow/: callbacks.py  preprocessing.py
bob/bio/face/test/: test_algorithms.py  test_annotator_utils.py  test_annotators.py  test_baseline.py  test_baselines.py  test_color.py  test_databases.py  test_embeddings.py  test_extractors.py  test_lightning.py  test_picklability.py  test_pipelines.py  test_preprocessors.py  test_pytorch_datasets.py  test_scripts.py  test_transformers.py
bob/bio/face/transformers/: __init__.py  arface.py  facenet_sanderberg.py  tensorflow_compat_v1.py
cnn_training/: ._centerloss_mixed_precision.py  arcface.py  arcface_large_batch.py  arcface_large_batch_sample_config.py  centerloss.py  centerloss_mixed_precision.py  msceleb_to_tfrecord.py  vgg2_2_tfrecords.py  vgg2_2_tfrecords_loose.py  webface360_to_tfrecord.py
conda/: meta.yaml
doc/: annotators.rst  baselines.rst  conf.py  datasets.rst  deeplearningextractor.rst  extend.rst  extra-intersphinx.txt  face_recognition_intro.rst  faq.rst  implementation.rst  implemented.rst  index.rst  leaderboard.rst  links.rst  references.rst
doc/examples/: facenet_pytorch.py  mymodel_tensorflow.py
doc/faq/: facecrop.ipynb  facecrop.py
doc/faq/.ipynb_checkpoints/: facecrop-checkpoint.ipynb  facecrop-checkpoint.py
doc/leaderboard/: arface.rst  banca.rst  gbu.rst  ijbc.rst  leaderboard.rst  lfw.rst  meds.rst  mobio.rst  morph.rst  multipie.rst  scface.rst  uccs.rst  xm2vts.rst
doc/leaderboard/script/multipie/: pose_analysis.html  pose_analysis.py
doc/leaderboard/table/multipie/: multipie_E.csv  multipie_M.csv  multipie_P.csv  multipie_U.csv
doc/plot/: default_crops.py
notebooks/: 50-shades-of-face.ipynb  Extract_ArcFace_from_MOBIO.ipynb  compare_two_samples.ipynb  inject_samples.ipynb
src/bob/bio/face/: __init__.py  color.py  utils.py
tests/: test_annotators.py  test_baselines.py  test_color.py  test_databases.py  test_lightning.py  test_preprocessors.py  test_pytorch_datasets.py  test_scripts.py  utils.py
tests/data/: boundingboxed.hdf5  cropped.hdf5  facenet_sandberg_20170512-110547.hdf5  histogram_cropped.hdf5  inception_resnet_v1_casia_rgb.hdf5  inception_resnet_v1_msceleb_rgb.hdf5  inception_resnet_v2_casia_rgb.hdf5  inception_resnet_v2_msceleb_rgb.hdf5  inorm_lbp_cropped.hdf5  testimage.json
(+169 files in other folders)
